slicing project, proposal, setting, client-detail

--- a/client-detail.html
+++ b/client-detail.html
@@ -682,24 +682,30 @@
                       >
                         <p class="bold-heading-5 mb-0">Proposal & Proyek</p>
                         <div class="d-flex align-items-center">
-                          <div class="form-group mb-0 mr-2">
+                          <div class="input-group input-focus mr-3">
                             <input
                               type="text"
                               class="form-control"
                               id="searchField"
-                              placeholder="Cari Klien..."
+                              placeholder="Cari disini"
                             />
+                            <div class="input-group-append">
+                              <span class="input-group-text bg-white"
+                                ><i class="fa fa-search"></i
+                              ></span>
+                            </div>
                           </div>
                           <div class="dropdown no-arrow">
                             <button
                               type="button"
                               id="filterDropdown"
-                              class="btn btn-secondary dropdown-toggle"
+                              class="btn bold-body dropdown-toggle primary-600--text"
+                              style="border: 1px solid #264179"
                               data-toggle="dropdown"
                               aria-haspopup="true"
                               aria-expanded="false"
                             >
-                              <i class="fas fa-filter"></i>
+                              <i class="fas fa-filter primary-600--text"></i>
                               Urutkan dan Filter
                             </button>
                             <!-- Filter Dropdown -->
